<resources>
    <string name="app_name">ComercialID</string>
    <string name="_644196907">644196907</string>
    <string name="ericsospedrasalort212_gmail_com">ericsospedrasalort212@gmail.com</string>
    <string name="www_cybermind_odoo_com">www.cybermind.odoo.com</string>
    <string name="foto">foto</string>
    <string name="qr">qr</string>
    <string name="eric_sosepdra_salort">Eric Sosepdra Salort</string>
    <string name="instagram">instagram</string>
    <string name="twitter">twitter</string>
    <string name="linkedin">linkedin</string>
    <string name="logo">logo</string>
</resources>